--- a/.github/workflows/build-kernel.yml
+++ b/.github/workflows/build-kernel.yml
@@ -21,8 +21,6 @@ jobs:
 
       - name: Pull toolchain
         run: |
-          ln -sf /usr/bin/python2 ./python
-          export PATH=$PWD:$PATH
           git clone --depth=1 https://github.com/LineageOS/android_prebuilts_gcc_linux-x86_aarch64_aarch64-linux-android-4.9 aarch64-linux-android-4.9
           git clone --depth=1 https://github.com/LineageOS/android_prebuilts_gcc_linux-x86_arm_arm-linux-androideabi-4.9 arm-linux-androideabi-4.9
           mkdir clang && curl https://android.googlesource.com/platform/prebuilts/clang/host/linux-x86/+archive/refs/heads/android14-dev/clang-r487747c.tar.gz -RLO && tar -C clang/ -xf clang-*.tar.gz
@@ -33,6 +31,7 @@ jobs:
 
       - name: Build kernel
         run: |
+          apt-get install python2 python-is-python2
           export KBUILD_BUILD_USER="indusy"
           export KBUILD_BUILD_HOST="ubuntu"
           export PATH=$GITHUB_WORKSPACE/clang/bin:${PATH}
