--- a/.github/workflows/build-kernel.yml
+++ b/.github/workflows/build-kernel.yml
@@ -31,7 +31,7 @@ jobs:
 
       - name: Build kernel
         run: |
-          apt-get install python2 python-is-python2
+          sudo apt-get install -y python2 python-is-python2
           export KBUILD_BUILD_USER="indusy"
           export KBUILD_BUILD_HOST="ubuntu"
           export PATH=$GITHUB_WORKSPACE/clang/bin:${PATH}
